[package]
name = "hello_rust"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] } # ✅ ADD "serde" HERE!
hyper = "1.7.0"
jsonwebtoken = "9.2.0"
chrono = "0.4.34"
ring = "0.17"          # ✅ FIXED!
